<resources>
    <string name="app_name">TODO_APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ok">Yes</string>
    <string name="no">No</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_title">Task title</string>
    <string name="task_details">Task Details</string>
    <string name="select_time">Select Time</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="enter_description">Enter description</string>
    <string name="add_task">Add task</string>
    <string name="add_new_task">Add new task</string>
    <string name="done">Done!</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="undone">Undone</string>
    <string name="delete">delete</string>
    <string name="save_changes">Save changes</string>
    <string name="do_you_want_save_changes">Do you want save changes ?</string>
    <string name="delete_this_task">Delete this task ?</string>
    <string name="to_do_list">To Do List</string>

    <array name="lang">
        <item>Defult</item>
        <item>English</item>
        <item>Arabic</item>
    </array>
    <array name="mode">
        <item>
            Defult
        </item>
        <item>
            Light mode
        </item>
        <item>
            Dark mode
        </item>
    </array>
</resources>