<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.taskfrag.BottomSheetFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/add_new_task"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_task"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:hint="@string/enter_description"
            android:maxLines="5"
            android:minLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            tools:text="DD-MM-YY" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primaryColour"
        android:paddingVertical="10dp"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="10dp" />

</LinearLayout>