<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="task"
            type="com.example.domain.model.Task" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mentgreen"
        tools:context=".ui.edit.EditActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColour">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="To Do List"
                app:titleMarginStart="35dp"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/primaryColour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="30dp"
                            android:text="@string/edit_task"
                            android:textSize="32sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/title_con"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/task_title"
                                android:imeOptions="actionNext"
                                android:text="@{task.taskName}"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/details_con"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_con">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/details"
                                android:text="@{task.description}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="start"
                                android:hint="@string/task_details"
                                android:maxLines="5"
                                android:minLines="5" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/tv2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/select_time"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/details_con" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/date_con"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv2">

                            <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@{task.formatTime()}"
                                android:gravity="center"
                                android:textSize="25sp"
                                tools:text="DD-MM-YY" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/save"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="50dp"
                            android:backgroundTint="@color/primaryColour"
                            android:paddingVertical="10dp"
                            android:text="@string/save_changes"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            app:cornerRadius="30dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/date_con" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.core.widget.NestedScrollView>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>