<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="task"
            type="com.example.domain.model.Task" />
    </data>

    <com.zerobranch.layout.SwipeLayout
        android:id="@+id/s2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:draggedItem="@id/draged"
        app:leftItem="@id/swipe"
        app:rightItem="@id/swipe2"
        app:swipeDirection="right|left">

        <LinearLayout
            android:id="@+id/swipe"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@drawable/sss"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_delete_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/draged"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <View
                    android:id="@+id/view"
                    android:layout_width="5dp"
                    android:layout_height="0dp"
                    android:background="@color/primaryColour"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:textColor="@color/primaryColour"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textStyle="bold"
                    android:text="@{task.taskName}"
                    tools:text="Task name" />

                <TextView

                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxEms="10"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:text="@{task.description}"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:text="description" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:drawablePadding="12dp"
                    android:text="@{task.formatTime()}"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:text="DD-MM-YY"
                    app:drawableStartCompat="@drawable/clock" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:background="@drawable/bg"
                    android:src="@drawable/check"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView"

                    />

                <TextView
                    android:id="@+id/done"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/done"
                    android:textSize="32sp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                    app:layout_constraintEnd_toEndOf="@+id/imageButton"
                    app:layout_constraintStart_toStartOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="@+id/imageButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/swipe2"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_margin="15dp"
            android:background="@drawable/sss2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_remove_done_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/undone"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.zerobranch.layout.SwipeLayout>
</layout>